# roc-master-mfc

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Mutilple.sln  ProjectConfig.h.in  README.md  Version.h.in  packages.config
.github/workflows/: NewVersionRelease.yml
Language/: ChineseSimplified.isl
Mutilple/: AboutWnd.cpp  AboutWnd.h  AbsPLCIntf.cpp  AbsPLCIntf.h  AutoDefectPosInfoWnd.cpp  AutoDefectPosInfoWnd.h  AutoScanInfoWnd.cpp  AutoScanInfoWnd.h  Channel.cpp  Channel.h  CheckWnd.cpp  CheckWnd.h  ConnectPLC.cpp  ConnectPLC.h  ControlIP.cpp  ControlIP.h  DACSetWnd.cpp  DACSetWnd.h  DacCount.cpp  DacCount.h  DefectListWnd.cpp  DefectListWnd.h  Define.h  DetectionStd.cpp  DetectionStd.h  DetectionStd_TBT2995_200.cpp  DetectionStd_TBT2995_200.h  DuiWindowBase.h  FragmentLoader.hpp  FreeFont.cpp  GroupScanWnd.cpp  GroupScanWnd.h  HDBridge.cpp  HDBridge.h  ICheckCarrier.h  ICoder.h  MainFrame.cpp  MainFrame.h  MainProcess.cpp  MainProcess.h  (+72 more)
Mutilple/Debug/: vc142.idb
Mutilple/Debug/Mutilple.tlog/: Mutilple.lastbuildstate
Mutilple/Extensions/Duckx/include/: minidocx.hpp
Mutilple/Extensions/Duckx/src/: duckx.cpp  minidocx.cpp
Mutilple/Extensions/DuiLib/: DuiLib.sln  DuiLib.vcxproj  DuiLib.vcxproj.filters  StdAfx.h  UIlib.h
Mutilple/Extensions/DuiLib/Control/: UIActiveX.cpp  UIButton.cpp  UIButton.h  UICheckBox.h  UIClickEdit.cpp  UIClickEdit.h  UIClickNum.cpp  UIClickNum.h  UIColorUI.cpp  UIColorUI.h  UICombo.cpp  UICombo.h  UIDateTime.cpp  UIDateTime.h  UIEdit.cpp  UIEdit.h  UIFlash.cpp  UIFlash.h  UIGifAnim.cpp  UIGifAnim.h  UIList.cpp  UIList.h  UIMenu.cpp  UIMenu.h  UIOption.cpp  UIRichEdit.cpp  UIRichEdit.h  UISlider.cpp  UISlider.h  UITreeView.cpp  UITreeView.h  UIWebBrowser.cpp  UIWebBrowser.h  UIWindow.cpp  UIWindow.h
Mutilple/Extensions/DuiLib/Core/: UIBase.cpp  UIBase.h  UIContainer.cpp  UIContainer.h  UIControl.cpp  UIControl.h  UIDefine.h  UIDlgBuilder.cpp  UIImageAttribute.cpp  UIManager.cpp  UIManager.h  UIMarkup.cpp  UIMarkup.h  UIRender.cpp  UIRender.h
Mutilple/Extensions/DuiLib/Debug/: DuiLib.dll.recipe
Mutilple/Extensions/DuiLib/Debug/DuiLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DuiLib.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Mutilple/Extensions/DuiLib/Utils/: ThirdParty.h  UIShadow.cpp  UIShadow.h  Utils.cpp  WebBrowserEventHandler.h  WinImplBase.cpp  WinImplBase.h
Mutilple/Extensions/HDBridge/: .clang-format  .gitignore  CMakeLists.txt  UML.drawio
Mutilple/Extensions/HDBridge/boards/NetworkMulti/: CMakeLists.txt  NetWorkMulti.cpp
Mutilple/Extensions/HDBridge/boards/NetworkMulti/include/: NetworkMulti.h
Mutilple/Extensions/HDBridge/boards/NetworkMulti/include/HDBridge/: NetworkMulti.h
Mutilple/Extensions/HDBridge/boards/NetworkMulti/lib/: NetworkMulti.lib
Mutilple/Extensions/HDBridge/boards/TOFDPort/: CMakeLists.txt  TOFDPort.cpp
Mutilple/Extensions/HDBridge/boards/TOFDPort/include/: TOFDPort.h
Mutilple/Extensions/HDBridge/boards/TOFDPort/include/HDBridge/: TOFDPort.h
Mutilple/Extensions/HDBridge/boards/TOFDPort/lib/: TOFDPort.lib
Mutilple/Extensions/HDBridge/include/: HDBridge.h
Mutilple/Extensions/HDBridge/include/HDBridge/: Utils.h
Mutilple/Extensions/HDBridge/src/: Utils.cpp
Mutilple/Extensions/HDBridge/test/: CMakeLists.txt  main.cpp
Mutilple/Extensions/HDBridge/test/sqlite3_orm/: CMakeLists.txt
Mutilple/Extensions/HDBridge/test/sqlite3_orm/include/sqlite_orm/: sqlite_orm.h
Mutilple/Extensions/MultiButton/: multi_button.c  multi_button.h
Mutilple/Extensions/NetworkMulti/: NetworkMulti.h  TOFDPort.h
Mutilple/Extensions/NetworkMulti/x64/: NetworkMulti.lib
Mutilple/Extensions/freetype/lib/: freetype.lib
Mutilple/Extensions/glm/gtx/: intersect.hpp
Mutilple/Extensions/jsoncpp/lib/: jsoncpp_static.lib
Mutilple/Extensions/libcurl/lib/: libcurl.lib
Mutilple/Extensions/rttr/lib/: rttr_core.lib  rttr_core_d.lib  rttr_core_s.lib  rttr_core_s_d.lib
Mutilple/Extensions/spdlog-1.12.0/include/spdlog/: pattern_formatter-inl.h
Mutilple/Extensions/spdlog-1.12.0/include/spdlog/details/: circular_q.h
Mutilple/Extensions/sqlite_orm/include/sqlite_orm/: sqlite_orm.h
Mutilple/Model/: DefectInfo.cpp  DefectInfo.h  DetectInfo.cpp  DetectInfo.h  ScanRecord.h  SystemConfig.h  UserModel.cpp  UserModel.h
Mutilple/UI/: BusyWnd.cpp  BusyWnd.h  ChannelSettingWnd.cpp  ChannelSettingWnd.h  DMessageBox.cpp  DMessageBox.h  DefectsListWnd.cpp  DefectsListWnd.h  DetectionInformationEntryWnd.cpp  DetectionInformationEntryWnd.h  DuiWindowBase.cpp  DuiWindowBase.h  GroupScanWnd.cpp  GroupScanWnd.h  HardWareWnd.cpp  HardWareWnd.h  InputDialogWnd.cpp  InputDialogWnd.h  MainFrameWnd.cpp  MainFrameWnd.h  ParamManagementWnd.cpp  ParamManagementWnd.h  RecordSelectWnd.cpp  RecordSelectWnd.h  SettingWnd.cpp  SettingWnd.h  TBusyWnd.hpp
Mutilple/Widgets/: Axis.cpp  Axis.h  FreeFont.h  Mesh.cpp  Mesh.h  MeshAscan.cpp  MeshAscan.h  MeshGroupCScan.cpp  MeshGroupCScan.h  Model.cpp  Model.h  ModelAScan.cpp  ModelAScan.h  ModelGroupAScan.cpp  ModelGroupAScan.h  ModelGroupCScan.cpp  ModelGroupCScan.h  OpenGL.cpp  OpenGL.h
Mutilple/res/: Mutilple.rc2
Mutilple/res/Theme/: DefectItem.xml  DetectLineItemFile.xml  LineItemFile.xml  TecItem.xml  UI_AboutWnd.xml  UI_AutoDefectPosInfoWnd.xml  UI_AutoScanInfoWnd.xml  UI_BusyWnd.xml  UI_ChannelSettingWnd.xml  UI_CheckWnd.xml  UI_DACSetWnd.xml  UI_DefectListWnd.xml  UI_DefectsListWnd.xml  UI_DetectionInformationEntryWnd.xml  UI_GroupScanWnd.xml  UI_HardWareWnd.xml  UI_InfoWnd.xml  UI_InputDialogWnd.xml  UI_MainFrame.xml  UI_MainFrameWnd.xml  UI_MessageBox.xml  UI_PLCWnd.xml  UI_ParamManagementWnd.xml  UI_ProbleWheelWnd.xml  UI_ReViewScanWnd.xml  UI_RecordSelectWnd.xml  UI_ScanWnd.xml  UI_SetQuartWnd.xml  UI_SetWnd.xml  UI_SettingWnd.xml  UI_TecListWnd.xml  UI_UserWnd.xml  UI_WheelUpDownWnd.xml
docker/: DockerFile
script/: convert_encoding.py  pack-installer.iss.in
template/: template.docx
x64/Debug/: TOFDPort.lib
x64/Debug/TechINI/: ruitie_840_231010.tech
x64/Release/: LastParam.ini
(+4 files in other folders)
